# cuStingerAlg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bc.cu  gpu_setup.cu  gpu_setup.cuh  kernels.cu  kernels.cuh  makefile  metis_to_csr.cpp  metis_to_csr.h  sequential.cpp  sequential.h  streaming_kernels.cu  util.cu  util.cuh
include/: algs.cuh  load_balance.cuh  macros.cuh  operators.cuh
include/bc_static/: bc.cuh  bc_tree.cuh
include/bc_streaming/: bc.hpp
include/static_bc/: bc.cuh
include/static_betweenness_centrality/: bc.cuh
include/static_betwenness_centrality/: bc.cuh  bc_tree.cuh
include/static_breadth_first_search/: bfs_bottom_up.cuh  bfs_hybrid.cuh  bfs_top_down.cuh
include/static_connected_components/: cc.cuh
include/static_katz_centrality/: katz.cuh
include/static_page_rank/: pr.cuh
include/streaming_katz_centrality/: katz.cuh
src/: load_balance.cu
src/bc_static/: bc.cpp  bc.cu  bc_main.cu  bc_tree.cu
src/bc_streaming/: bc.cpp  bc.cu
src/static_bc/: bc.cu  bc_main.cu  bc_tree.cu
src/static_betweenness_centrality/: bc.cu  bc_tree.cu
src/static_betwenness_centrality/: bc.cu  bc_tree.cu
src/static_breadth_first_search/: bfs.cu  bfs_bottom_up.cu  bfs_hybrid.cu  bfs_top_down.cu
src/static_connected_components/: cc_baseline.cu  cc_concurrent.cu  cc_load_balanced.cu
src/static_katz_centrality/: katz.cu
src/static_page_rank/: pr.cu
src/static_triangle_counting/: cct.cu
src/streaming_katz_centrality/: katz.cu
src/streaming_triangle_counting/: cct_upd.cu
tests/: alg-tester.cu  bfs.cpp  cct.cpp  cct_csr.cu  cct_upd.cpp  forest-tester.cu  forest-tester.h  katz-tester.cu  static_bc.cu
